--- a/index.html
+++ b/index.html
@@ -18,23 +18,12 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
   <div class="container">
     <main>
-      <section>
+      <section class="left">
         <h1>
           Get <span>insights</span> that help your business grow.
         </h1>
@@ -57,12 +46,15 @@
           </li>
         </ul>
       </section>
+      <section class="right">
+        <img src="./images/image-header-desktop.jpg" alt="workers"/>
+      </section>
     </main>
 
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
   </div>
 </body>
 </html>
