--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <h1>
           Get <span>insights</span> that help your business grow.
         </h1>
-        <p>
+        <p class="description">
           Discover the benefits of data analytics and make better decisions regarding revenue, customer
           experience, and overall efficiency.
         </p>
-        <ul>
+        <ul class="stats-list">
           <li>
             <strong>10k+</strong>
             <span>companies</span>
@@ -47,7 +47,10 @@
         </ul>
       </section>
       <section class="right">
-        <img src="./images/image-header-desktop.jpg" alt="workers"/>
+        <picture>
+          <source media="(min-width:769px)" srcset="./images/image-header-mobile.jpg">
+          <img src="./images/image-header-desktop.jpg" alt="Three women in office" style="width:auto;">
+        </picture>
       </section>
     </main>
 
