--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       </section>
     </main>
 
-    <!-- <div class="attribution">
+    <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      Coded by <a href="https://www.frontendmentor.io/profile/AkromDev">AkromDev</a>.
+    </div>
   </div>
 </body>
 </html>
