added solution url

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div class="container">
     <main>
-      <section class="left">
+      <div class="left">
         <h1>
           Get <span>insights</span> that help your business grow.
         </h1>
@@ -45,13 +45,13 @@
             <span>queries</span>
           </li>
         </ul>
-      </section>
-      <section class="right">
+      </div>
+      <div class="right">
         <picture>
           <source media="(min-width:769px)" srcset="./images/image-header-mobile.jpg">
           <img src="./images/image-header-desktop.jpg" alt="Three women in office" style="width:auto;">
         </picture>
-      </section>
+      </div>
     </main>
 
     <div class="attribution">
