--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       </div>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://www.frontendmentor.io/profile/AkromDev">AkromDev</a>.
-    </div>
+    </footer>
   </div>
 </body>
 </html>
